--- a/farm.html
+++ b/farm.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal portfolio</title>
+    <title>FarmU</title>
     <link rel="stylesheet" href="farmu2.css">
     <script src="https://kit.fontawesome.com/f7341ef0e6.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <section class="hero" >
+        
+        <div>
         <nav class="navbar">
         <h1 class="logo"><span class="sim">F</span><span class="ff">arm</span><span class="op">U</span></h1>
         <ul>
@@ -19,10 +22,16 @@
 
         </ul>
         </nav>
+        </div>
         <header class="header">
         <div class="header-div">
-            <h1 class="head-text1"><span class="jj">Find </span>the best fit for your crop with us</h1>
+            <h1 class="head-text1"><span class="jj">Find </span><span class="pi">the best fit for your crop with us</span></h1>
+            </div>
+            <div class="fd">
             <button class="btn"><a href="crop.html"><b>Search</b></a></button>
             
         </div>
         </header>
+        </section>
+        </body>
+        </html>
